--- a/ZMCKitLib/app/src/main/AndroidManifest.xml
+++ b/ZMCKitLib/app/src/main/AndroidManifest.xml
@@ -26,5 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.ziylanmedya.camera.CustomCameraActivity"
+            android:exported="true">
+        </activity>
     </application>
 </manifest>
