Added Image Preview
Added Image Preview Fixed other code

--- a/ZMCKitLib/settings.gradle
+++ b/ZMCKitLib/settings.gradle
@@ -11,7 +11,7 @@ pluginManagement {
 //        maven {
 //        //    url "https://raw.githubusercontent.com/ziylanmedya/ZMCameraKit-Android/main/"
 //
-//            //  url "${rootDir}/local-maven-repo"
+            //  url "${rootDir}/local-maven-repo"
 //        }  // Add this line to ensure local repo is included
         gradlePluginPortal()
     }
