--- a/ZMCKitLib/zmckit/build.gradle
+++ b/ZMCKitLib/zmckit/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     def cameraKitVersion = '1.34.0'
     implementation"com.ziylanmedya.zmckit:support-camera-activity:$cameraKitVersion"
 
+//    implementation ("com.ziylanmedya.zmckit:camerakit:$cameraKitVersion")
+//    implementation ("com.ziylanmedya.zmckit:support-camera-layout:$cameraKitVersion")
+
 //    implementation 'com.ziylanmedya.zmckit:camerakit:1.34.0'
 //    implementation 'com.ziylanmedya.zmckit:camerakit-api:1.34.0'
 //    implementation 'com.ziylanmedya.zmckit:camerakit-kotlin:1.34.0'
@@ -68,7 +71,7 @@ project.afterEvaluate {
             release(MavenPublication) {
                 groupId = "com.ziylanmedya" // Your package name
                 artifactId = "zmckit" // Library name
-                version = "1.0.1" // Version of the library
+                version = "1.0.2" // Version of the library
 
                 // Publish the AAR file
                 artifact bundleReleaseAar // Assuming you're publishing the AAR
