--- a/ZMCKitLib/zmckit/src/main/AndroidManifest.xml
+++ b/ZMCKitLib/zmckit/src/main/AndroidManifest.xml
@@ -6,5 +6,20 @@
             android:exported="true"
             />
 
+        <activity
+            android:name=".camera.ImagePreviewActivity"
+            android:exported="true"
+            />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.ziylanmedya.camera.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 </manifest>
